@@ -7,3 +7,7 @@
   id_seq_component: 2
   id_seq_composition: 2
   size: 1
+- id_seq_comcom: 3
+  id_seq_component: 3
+  id_seq_composition: 3
+  size: 1
