@@ -5,3 +5,6 @@
 - id_seq_composition: 2
   digest: 31c404f9f0be24fd6d75e0effab43ebff58b1d23a9a925ff14850162de431cb6
   size: 1
+- id_seq_composition: 3
+  digest: 160c35f2b3ea0c5419a811d9f514e77fd5c8d96e032e24934c33b12079a83872
+  size: 1
